k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dame
  labels:
    app.kubernetes.io/name: dame
    app.kubernetes.io/part-of: dame-app
