k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dame
  namespace: dame
  labels:
    app.kubernetes.io/name: dame
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dame
